Fix button icons off in Chrome
Now they look off in Firefox :P
It's just 2px misalignment of the icons though.

I was told that nobody uses Firefox for Cardano development.
And this is a minor UI bug.

How to fix this:
 Instead of shipping ~10 svgs totalling a few 10s of KBs, ship the 10MB
 font-awesome.
 It's hard to align svgs to baseline. Fonts shouldn't have that issue.

--- a/webext/src/popup/styles.scss
+++ b/webext/src/popup/styles.scss
@@ -39,7 +39,6 @@ $color-background: #ffffff;
   border: none;
   text-decoration: none;
   font: inherit;
-  font-size: inherit;
   color: inherit;
   background: transparent;
   transition:
@@ -73,6 +72,8 @@ body {
   font-family: "Inter", sans-serif;
 
   --flex-direction: column;
+
+  font-size: 16px;
 }
 
 .mono {
@@ -190,7 +191,7 @@ body {
   cursor: pointer;
 
   display: flex;
-  align-items: center;
+  align-items: end;
 
   --color: #{$color-action};
   color: var(--color);
@@ -202,9 +203,17 @@ body {
   --gap: 5px;
 
   .icon {
-    height: 1em;
-    width: 1em;
-    mask-size: 1em;
+    height: 1.0em;
+    width: 1.0em;
+
+    -webkit-mask-size: 100%;
+    mask-size: 100%;
+
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+
+    // workaround chrome line height bug
+    margin-bottom: 2px;
 
     background-color: var(--color);
   }
@@ -432,6 +441,7 @@ label {
 
     {
     &.-#{$icon} {
+      -webkit-mask-image: url("static/icons/#{$icon}.svg");
       mask-image: url("static/icons/#{$icon}.svg");
     }
   }
